--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,15 @@ development:
   password: pimpao
   host: weight-db.tiagoluchini.eu
 
+development_ixonos:
+  adapter: mysql
+  encoding: utf8
+  database: weight_control_development
+  pool: 5
+  username: root
+  password: pimpao
+  host: LTTL176.ixonos.local
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
