--- a/test/fixtures/targets.yml
+++ b/test/fixtures/targets.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  date: 2009-02-09
-  weight: 1.5
-
-two:
-  date: 2009-02-09
-  weight: 1.5
+  user_id: 1
+  starting_date: 2009-02-10
+  starting_weight: 80
+  target_date: 2009-02-12
+  target_weight: 60
+  
