--- a/test/fixtures/targets.yml
+++ b/test/fixtures/targets.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  user_id: 1
+lose_ten:
+  user_id: 3
   starting_date: 2009-02-10
   starting_weight: 80
   target_date: 2009-02-12
